// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validator renders correctly, 2 nodes 1`] = `
<div
  className="validator-container"
>
  <div
    className="validator-stats"
  >
    <h2>
      Validator 
      Test title
    </h2>
    <div
      className="validator-stats-container"
    >
      <div
        className="validator-card-container"
      >
        <h5>
          Return (ETH)
        </h5>
        <h1
          className="plus"
        >
          +
          10
          %
        </h1>
        <h5
          className="plus"
        >
          ROI
        </h5>
      </div>
      <div
        className="validator-card-container"
      >
        <h5>
          Balance
        </h5>
        <h1>
          .1206
        </h1>
        <h5>
          ETH
        </h5>
      </div>
      <div
        className="validator-card-container"
      >
        <h5>
          Uptime
        </h5>
        <h1>
          92.1
        </h1>
        <h5>
          DAYS
        </h5>
      </div>
    </div>
  </div>
  <div
    className="validator-nodes"
  >
    <div
      className="node-container"
    >
      <div
        className="node-grid-container"
      >
        <div
          className="node-card-container"
          onClick={[Function]}
        >
          <h2>
            BeaconNode1
          </h2>
          <span
            className="node-text"
          >
            rocketsonic1.hr
          </span>
          <h2>
            21
            ms
          </h2>
          <span
            className="node-text time"
          >
            Average Response Time
          </span>
        </div>
        <div
          className="node-card-container"
          onClick={[Function]}
        >
          <h2>
            BeaconNode2
          </h2>
          <span
            className="node-text"
          >
            rocketsonic2.hr
          </span>
          <h2>
            22
            ms
          </h2>
          <span
            className="node-text time"
          >
            Average Response Time
          </span>
        </div>
      </div>
      <button
        className="add-button"
        onClick={[Function]}
      >
        <img
          className="icon"
          src="test-file-stub"
        />
      </button>
      <div
        className="show 
                            none
                            more"
        onClick={[Function]}
      >
        Show More
      </div>
    </div>
    <div
      className="validator-buttons"
    >
      <button
        className="button btn-destructive "
        onClick={[Function]}
      >
        <div
          className=""
        >
          REMOVE
        </div>
      </button>
      <button
        className="button btn-primary "
        onClick={[Function]}
      >
        <div
          className=""
        >
          DETAILS
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Validator renders correctly, 4 nodes 1`] = `
<div
  className="validator-container"
>
  <div
    className="validator-stats"
  >
    <h2>
      Validator 
      Test title
    </h2>
    <div
      className="validator-stats-container"
    >
      <div
        className="validator-card-container"
      >
        <h5>
          Return (ETH)
        </h5>
        <h1
          className="plus"
        >
          +
          10
          %
        </h1>
        <h5
          className="plus"
        >
          ROI
        </h5>
      </div>
      <div
        className="validator-card-container"
      >
        <h5>
          Balance
        </h5>
        <h1>
          .1206
        </h1>
        <h5>
          ETH
        </h5>
      </div>
      <div
        className="validator-card-container"
      >
        <h5>
          Uptime
        </h5>
        <h1>
          92.1
        </h1>
        <h5>
          DAYS
        </h5>
      </div>
    </div>
  </div>
  <div
    className="validator-nodes"
  >
    <div
      className="node-container"
    >
      <div
        className="node-grid-container"
      >
        <div
          className="node-card-container"
          onClick={[Function]}
        >
          <h2>
            BeaconNode1
          </h2>
          <span
            className="node-text"
          >
            rocketsonic1.hr
          </span>
          <h2>
            21
            ms
          </h2>
          <span
            className="node-text time"
          >
            Average Response Time
          </span>
        </div>
        <div
          className="node-card-container"
          onClick={[Function]}
        >
          <h2>
            BeaconNode2
          </h2>
          <span
            className="node-text"
          >
            rocketsonic2.hr
          </span>
          <h2>
            22
            ms
          </h2>
          <span
            className="node-text time"
          >
            Average Response Time
          </span>
        </div>
      </div>
      <button
        className="add-button"
        onClick={[Function]}
      >
        <img
          className="icon"
          src="test-file-stub"
        />
      </button>
      <div
        className="show 
                            
                            more"
        onClick={[Function]}
      >
        Show More
      </div>
    </div>
    <div
      className="validator-buttons"
    >
      <button
        className="button btn-destructive "
        onClick={[Function]}
      >
        <div
          className=""
        >
          REMOVE
        </div>
      </button>
      <button
        className="button btn-primary "
        onClick={[Function]}
      >
        <div
          className=""
        >
          DETAILS
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Validator renders correctly, Validator simple 1`] = `
<div
  className="validator-simple-container"
>
  <div
    className="validator-simple-keys"
  >
    <h2>
      Validator 002
    </h2>
    <div
      className="prompt-overlay prompt-hide"
    >
      <div
        className="prompt-modal"
      >
        <h2
          className="prompt-title"
        >
          Confirm password
        </h2>
        <form
          onSubmit={[Function]}
        >
          <div
            className="label"
          />
          <div
            className="inputform-container"
          >
            <input
              className="inputform "
              id="prompt-input"
              onChange={[Function]}
              placeholder="Please renter your password..."
              type="password"
              value=""
            />
            <div
              className="input-eye none"
            />
          </div>
          <div
            className="error-message"
          />
        </form>
        <div
          className="button-control"
        >
          <div
            className="prompt-cancel-button"
          >
            <button
              className="button btn-destructive "
              onClick={[Function]}
            >
              <div
                className=""
              >
                Cancel
              </div>
            </button>
          </div>
          <div
            className="prompt-confirm-button"
          >
            <button
              className="button btn-primary "
              onClick={[Function]}
            >
              <div
                className=""
              >
                OK
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
    <form>
      <div
        className="label"
      >
        PRIVATE KEY
      </div>
      <div
        className="inputform-container"
      >
        <input
          autoFocus={false}
          className="inputform "
          readOnly={true}
          type="password"
        />
        <div
          className="input-eye "
          onClick={[Function]}
        />
      </div>
      <div
        className="error-message"
      />
    </form>
    <form>
      <div
        className="label"
      >
        PUBLIC KEY
      </div>
      <div
        className="inputform-container"
      >
        <input
          autoFocus={false}
          className="inputform "
          readOnly={true}
          type="text"
          value="6ffa3d24c9c26877d4a8bfa87455f44666ce93b7e13a3f84"
        />
        <div
          className="input-eye none"
        />
      </div>
      <div
        className="error-message"
      />
    </form>
  </div>
  <div
    className="validator-simple-status"
  >
    <h2>
      Status: 
      Not working
    </h2>
    <div
      className="validator-card-container"
    >
      <h5>
        Deposit
      </h5>
      <h1>
        20.345
      </h1>
      <h5>
        ETH
      </h5>
    </div>
    <div
      className="validator-simple-buttons"
    >
      <button
        className="button btn-destructive "
        onClick={[Function]}
      >
        <div
          className=""
        >
          REMOVE
        </div>
      </button>
      <button
        className="button btn-secondary "
        onClick={[Function]}
      >
        <div
          className=""
        >
          EXPORT
        </div>
      </button>
    </div>
  </div>
</div>
`;
